<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="page.chat.ContactPage">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0e7a6f"
        app:layout_constraintTop_toTopOf="parent"
        android:contentInsetStart="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">
                <LinearLayout
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_back"/>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/pfp"
                            android:layout_width="39dp"
                            android:layout_height="39dp"
                            android:contentDescription="@string/profilePicture"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <TextView
                    android:id="@+id/displayNamePlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/whotsapp"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingsContacts"
                android:layout_width="52dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:contentDescription="@string/whotsappicon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_settings_icon"
                android:layout_marginRight="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstPosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</androidx.constraintlayout.widget.ConstraintLayout>